# argus-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.ko.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.ko.md  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  deny.toml  devices.toml.example  hosts.toml.example
crates/argus-kv-codec/: Cargo.toml
crates/argus-kv-codec/src/: lib.rs
crates/technique-api/: Cargo.toml  README.md
crates/technique-api/src/: lib.rs
crates/techniques/attn-score/: Cargo.toml
crates/techniques/attn-score/src/: gpu_reduce.rs  gpu_reduce_cuda.rs  lib.rs  score_reduce.cl  score_reduce.cu
crates/techniques/caote/: Cargo.toml
crates/techniques/caote/src/: lib.rs
crates/techniques/d2o/: Cargo.toml
crates/techniques/d2o/src/: lib.rs
crates/techniques/example-bundle/: Cargo.toml
crates/techniques/example-keep-recent/: Cargo.toml
crates/techniques/example-kv-format/: Cargo.toml
crates/techniques/example-multi-format/: Cargo.toml
crates/techniques/example-no-export/: Cargo.toml
crates/techniques/example-rollback/: Cargo.toml
crates/techniques/h2o/: Cargo.toml
crates/techniques/h2o-plus/: Cargo.toml
crates/techniques/h2o-plus/src/: lib.rs
crates/techniques/kivi/: Cargo.toml
crates/techniques/layer-importance/: Cargo.toml
crates/techniques/mixed-precision/: Cargo.toml
crates/techniques/no-eviction/: Cargo.toml
crates/techniques/pyramidkv/: Cargo.toml
crates/techniques/q2-format/: Cargo.toml
crates/techniques/quest/: Cargo.toml
crates/techniques/rkv/: Cargo.toml
crates/techniques/sliding-window/: Cargo.toml
crates/techniques/streaming-llm/: Cargo.toml
crates/techniques/triattention/: Cargo.toml
crates/techniques/weight-swap/: Cargo.toml
engine/: Cargo.toml
engine/kernels/: argsort.cl  dequant_opaque_q2_f16.cl  flash_attn_f32_f16.cl  gemv_noshuffle_q4_0.cl  mul_mat_Ab_Bi_8x4.cl  mul_mm_q4_0_f32_l4_lm.cl  mul_mv_f16_f32_1row_simple.cl  rope.cl  simple_ops.cl
engine/src/: backend.rs  capability.rs  cpu_kernels.rs  experiment.rs  format.rs  hybrid_attention.rs  inference.rs  kv.rs  kv_cache_ops.rs  lib.rs  model_config.rs  pipeline.rs  qcf.rs  qcf_collector.rs  qcf_computer.rs  qcf_types.rs  quant.rs  resilience.rs  session.rs
engine/src/auf/: error.rs  header.rs  writer.rs
engine/src/backend/: cuda_embedded.rs  cuda_pc.rs  opencl.rs
engine/src/bin_helpers/: stage_host_ptr_helpers.rs
engine/src/buffer/: opaque.rs
engine/src/capability/: dynamic_backend_registry.rs  kivi_attention.rs  quant_attn.rs
engine/src/format/: builtin_kv_formats.rs  dtype_layout.rs  dynamic_format_registry.rs  format_policy_registry.rs  kv_cache_format.rs  kv_snapshot.rs  selective_read.rs  weight_format.rs
engine/src/inference/: attention_scores.rs  query_stats.rs  sampling.rs  skip_config.rs
engine/src/kv/: cache_handle.rs  cache_manager.rs  d2o_handler.rs  d2o_layer_alloc.rs  dequant.rs  descriptor.rs  eviction.rs  eviction_handler.rs  format_apply.rs  gpu_kv_buffers.rs  kivi_cache.rs  kivi_format.rs  kv_cache.rs  naive_reference.rs  offload_format.rs  quant_window_cache.rs  quant_window_cache_abi_shim.rs  quant_window_cuda.rs  quant_window_format.rs  quantize_handler.rs  read.rs  rkv_stage.rs  squeeze_budget.rs  standard_format.rs  swap_handler.rs
engine/src/layers/: tensor_partition.rs  transformer_layer.rs
engine/src/models/: offload_forward.rs  transformer.rs
engine/src/observability/: profile.rs  rss_trace.rs
engine/src/qcf/: estimator.rs  layer_importance.rs  qcf_kv.rs  quant_qcf.rs  skip_qcf.rs
engine/src/quant/: f16_bulk.rs  flash_neon.rs
engine/src/resilience/: dbus_transport.rs  executor.rs  signal.rs  sys_monitor.rs  transport.rs
engine/src/session/: assembly.rs  bin_setup.rs  chat.rs  chat_template.rs  cli.rs  command_dispatcher.rs  decode_loop.rs  defaults.rs  dump_importance.rs  eval.rs  eval_setup.rs  experiment_run.rs  forward.rs  head_concentration.rs  init.rs  local_pressure.rs  mode.rs  plugin_dispatch.rs  ppl.rs  qcf_runtime.rs  resilience_adapter.rs  resilience_init.rs  score_decay_dump.rs  squeeze_warmup.rs  standard_happy.rs  swap_runtime.rs
engine/src/stages/: kv.rs  weight.rs
engine/src/weight/: decider.rs  noise_table.rs  stage_ctx.rs  stage_registry.rs  swap_executor.rs  weight_swap_handler.rs
engine/tests/: beta3_eviction_stage_equivalence.rs  beta4_command_channel.rs  beta5_pressure_driven_eviction.rs  chat_ipc.rs  chat_template.rs  demote_measure.rs  flash_attn_decode.rs  flash_attn_decode_dk128.rs  flash_attn_prefill_dk128.rs  flash_attn_prefill_dk256.rs  fused_norm_merge.rs  gate_c_backend_cap_dlopen.rs  gate_c_kivi_backend_cap.rs  gate_c_plugin_bundle.rs  gemma3_4b_loading.rs  spec.rs  test_action_pool.rs  test_attention_flash_decoding.rs  test_attention_online_softmax.rs  test_auf_gguf_byte_equivalence.rs  test_eviction_memory.rs  test_prefill_flash_attention.rs  test_resilience_integration.rs  test_sliding_window_validity.rs
engine/tests/spec/: helpers.rs  test_async_swap_executor.rs  test_auf_e2e_sanity.rs  test_chat_repl_v2_multi_turn.rs  test_chat_session_multi_turn.rs  test_cross_060_061.rs  test_eng_085_prefix_cache_cli.rs  test_eng_alg_010_012.rs  test_eng_alg_020_022.rs  test_eng_alg_030_048.rs  test_eng_alg_051.rs  test_eng_alg_060_092.rs  test_eng_alg_200_plan_partition.rs  test_eng_alg_210_initial_load.rs  test_eng_alg_211_weight_swap_handler.rs  test_eng_alg_219_plan_invalidation.rs  test_eng_alg_224_writer_multi_dtype.rs  test_eng_alg_225_reader_dispatch.rs  test_eng_alg_229_targeted_prefault.rs  test_eng_alg_232_eager_prefault.rs  test_eng_alg_232_incremental_plan.rs  test_eng_alg_233_main_loop_dispatch.rs  test_eng_dat_012_031.rs  test_eng_dat_092_layer_slot.rs  test_eng_dat_094_secondary_mmap.rs  test_eng_dat_096_auf_secondary.rs  test_eng_dat_c05_streaming.rs  test_eng_dat_c06_d2o.rs  test_eng_st_010_035.rs  test_eng_st_032.rs  test_eng_st_052_060.rs  test_fsm_operating_mode.rs  test_g1e_lm_head_integration.rs  test_host_ptr_pool.rs  test_inv_003.rs  test_inv_004_017.rs  test_inv_005_006.rs  test_inv_015.rs  test_inv_020_026.rs  test_inv_062_064.rs  (+55 more)
(+134 files in other folders)
