[package]
name = "argus-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "On-device LLM inference engine for ARM64 edge devices: Q4_0/Q8_0 quantization, OpenCL/CUDA backends, KV-cache eviction, zero-copy memory."
repository.workspace = true
authors.workspace = true
keywords = ["llm", "inference", "on-device", "quantization", "opencl"]
categories = ["science", "command-line-utilities"]

[dependencies]
# Shared IPC protocol types (manager <-> engine). Separate repo.
argus-shared = { git = "https://github.com/hedone21/argus-shared.git", branch = "main" }
# Extension surface: the stage-axis KVCacheStage registry + linkme auto-registration.
technique-api = { path = "../crates/technique-api" }
linkme = "0.3"
# CAOTE (value-aware KVCacheStage) production plugin. Opt-in via the `caote` feature.
caote = { path = "../crates/techniques/caote", optional = true }
# Opaque .so format `synth_q4` (block-quant family without a DType) — force-linked
# into the binary so `--kv-format synth_q4` resolves a real out-of-tree plugin.
synth-q4-format = { path = "../crates/techniques/synth-q4-format" }
# Quest (query-aware selective read): the first KVReadStage builtin. Non-optional,
# force-linked, with a startup self-test that fails fast on fat-LTO drop.
quest = { path = "../crates/techniques/quest" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Model loading
safetensors = "0.7"
memmap2 = "0.9"
half = "2.7.1"      # bf16 -> f32 conversion

# Weight swap: lock-free Arc snapshot
arc-swap = "1.7"

# Tokenizer
tokenizers = { version = "0.22", default-features = false, features = [
  "progressbar",
  "onig",
] }

# Utilities
anyhow = "1.0"
rand = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Parallelism
rayon = "1.11"

# System
libc = "0.2"

# Logging
log = "0.4"
env_logger = "0.11"

# OpenCL
ocl = { version = "0.19", optional = true }

# dlopen — runtime loading of GATE-C plugin (.so); also Android rpcmem
# libcdsprpc.so dlopen. Non-optional core dependency.
libloading = "0.8"

# CUDA (PC / discrete GPU and Jetson embedded UMA)
cudarc = { version = "0.19", optional = true, default-features = false, features = [
  "std", "driver", "nvrtc", "cublas", "f16", "fallback-dynamic-loading",
  "cuda-11040",
] }

# D-Bus IPC (resilience)
zbus = { version = "5", optional = true, default-features = false, features = ["blocking-api", "async-io"] }

tempfile = "3.0"

[dev-dependencies]
# compile-fail / compile-pass tests for session typestate.
trybuild = "1.0"
# Verifies a separate technique crate self-registers into KV_CACHE_STAGES by
# adding a dependency only (cross-crate linkme). Dev-only (not linked in production).
example-keep-recent = { path = "../crates/techniques/example-keep-recent" }

[features]
default = ["opencl", "profile"]
opencl = ["ocl"]
profile = []
# CAOTE value-aware eviction plugin install. When on, the caote crate is linked
# and the `eviction caote` subcommand becomes available.
caote = ["dep:caote"]
# R-KV (cosine redundancy + importance joint eviction) measurement prototype.
# Pure cfg gate, no external dependency. Default OFF.
rkv = []
cuda = ["cudarc"]               # PC / discrete GPU
cuda-embedded = ["cudarc"]      # Embedded UMA, e.g. Jetson Xavier
resilience = ["zbus"]
