[package]
name = "argus-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "On-device LLM inference engine for ARM64 edge devices: Q4_0/Q8_0 quantization, OpenCL/CUDA backends, KV-cache eviction, zero-copy memory."
repository.workspace = true
authors.workspace = true
keywords = ["llm", "inference", "on-device", "quantization", "opencl"]
categories = ["science", "command-line-utilities"]
# Bins are declared explicitly below so the user-facing `argus-*` family ships with
# hyphenated names (`argus-cli`, not `argus_cli`). Disable auto-discovery to avoid
# duplicate targets for the same `src/bin/*.rs` file.
autobins = false

# ── Binaries ────────────────────────────────────────────────────────────────
# argus-* family: hyphenated user-facing names mapped to underscore source files.
[[bin]]
name = "argus-cli"
path = "src/bin/argus_cli.rs"

[[bin]]
name = "argus-chat"
path = "src/bin/argus_chat.rs"

[[bin]]
name = "argus-bench"
path = "src/bin/argus_bench.rs"

[[bin]]
name = "argus-eval"
path = "src/bin/argus_eval.rs"

# Internal dev / test tools keep their underscore names.
[[bin]]
name = "auf_tool"
path = "src/bin/auf_tool.rs"

[[bin]]
name = "signal_injector"
path = "src/bin/signal_injector.rs"

[[bin]]
name = "test_backend"
path = "src/bin/test_backend.rs"

[[bin]]
name = "test_model"
path = "src/bin/test_model.rs"

[[bin]]
name = "test_q4_soa_byte_equal"
path = "src/bin/test_q4_soa_byte_equal.rs"

[dependencies]
# Shared IPC protocol types (manager <-> engine). Separate repo.
argus-shared = { git = "https://github.com/hedone21/argus-shared.git", branch = "main" }
# Extension surface: the stage-axis KVCacheStage registry + linkme auto-registration.
technique-api = { path = "../crates/technique-api" }
linkme = "0.3"
# CAOTE (value-aware KVCacheStage) production plugin. Opt-in via the `caote` feature.
caote = { path = "../crates/techniques/caote", optional = true }
# Opaque .so format `synth_q4` (block-quant family without a DType) — force-linked
# into the binary so `--kv-format synth_q4` resolves a real out-of-tree plugin.
synth-q4-format = { path = "../crates/techniques/synth-q4-format" }
# Quest (query-aware selective read): the first KVReadStage builtin. Non-optional,
# force-linked, with a startup self-test that fails fast on fat-LTO drop.
quest = { path = "../crates/techniques/quest" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Model loading
safetensors = "0.7"
memmap2 = "0.9"
half = "2.7.1"      # bf16 -> f32 conversion

# Weight swap: lock-free Arc snapshot
arc-swap = "1.7"

# Tokenizer
tokenizers = { version = "0.22", default-features = false, features = [
  "progressbar",
  "onig",
] }

# Utilities
anyhow = "1.0"
rand = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP server for argus-chat (OpenAI-compatible API). Blocking, no async runtime —
# the engine decode loop is single-threaded and serialized on one thread.
tiny_http = "0.12"

# Parallelism
rayon = "1.11"

# System
libc = "0.2"

# Logging
log = "0.4"
env_logger = "0.11"

# OpenCL
ocl = { version = "0.19", optional = true }

# dlopen — runtime loading of GATE-C plugin (.so); also Android rpcmem
# libcdsprpc.so dlopen. Non-optional core dependency.
libloading = "0.8"

# CUDA (PC / discrete GPU and Jetson embedded UMA)
cudarc = { version = "0.19", optional = true, default-features = false, features = [
  "std", "driver", "nvrtc", "cublas", "f16", "fallback-dynamic-loading",
  "cuda-11040",
] }

# D-Bus IPC (resilience)
zbus = { version = "5", optional = true, default-features = false, features = ["blocking-api", "async-io"] }

tempfile = "3.0"

[dev-dependencies]
# compile-fail / compile-pass tests for session typestate.
trybuild = "1.0"
# Verifies a separate technique crate self-registers into KV_CACHE_STAGES by
# adding a dependency only (cross-crate linkme). Dev-only (not linked in production).
example-keep-recent = { path = "../crates/techniques/example-keep-recent" }

[features]
default = ["opencl", "profile"]
opencl = ["ocl"]
profile = []
# CAOTE value-aware eviction plugin install. When on, the caote crate is linked
# and the `eviction caote` subcommand becomes available.
caote = ["dep:caote"]
# R-KV (cosine redundancy + importance joint eviction) measurement prototype.
# Pure cfg gate, no external dependency. Default OFF.
rkv = []
cuda = ["cudarc"]               # PC / discrete GPU
cuda-embedded = ["cudarc"]      # Embedded UMA, e.g. Jetson Xavier
resilience = ["zbus"]
