[package]
name = "argus-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "On-device LLM inference engine for ARM64 edge devices: Q4_0/Q8_0 quantization, OpenCL/CUDA backends, KV-cache eviction, zero-copy memory."
repository.workspace = true
authors.workspace = true
keywords = ["llm", "inference", "on-device", "quantization", "opencl"]
categories = ["science", "command-line-utilities"]
# Not published to crates.io: depends on the `argus-shared` git dependency and on
# path-only technique crates, which crates.io rejects. Source-only for now.
publish = false
# Bins are declared explicitly below so the user-facing `argus-*` family ships with
# hyphenated names (`argus-cli`, not `argus_cli`). Disable auto-discovery to avoid
# duplicate targets for the same `src/bin/*.rs` file.
autobins = false

# ── Binaries ────────────────────────────────────────────────────────────────
# argus-* family: hyphenated user-facing names mapped to underscore source files.
[[bin]]
name = "argus-cli"
path = "src/bin/argus_cli.rs"

[[bin]]
name = "argus-chat"
path = "src/bin/argus_chat.rs"

[[bin]]
name = "argus-bench"
path = "src/bin/argus_bench.rs"

[[bin]]
name = "argus-eval"
path = "src/bin/argus_eval.rs"

# Internal dev / test tools keep their underscore names.
[[bin]]
name = "auf_tool"
path = "src/bin/auf_tool.rs"

[[bin]]
name = "signal_injector"
path = "src/bin/signal_injector.rs"

# GPU test/dev bins that reference `backend::opencl` unconditionally: gate on the
# opencl feature so a cuda-only build (`--no-default-features --features cuda`) skips
# them instead of failing to compile. Not production bins.
[[bin]]
name = "test_backend"
path = "src/bin/test_backend.rs"
required-features = ["opencl"]

[[bin]]
name = "test_model"
path = "src/bin/test_model.rs"

[[bin]]
name = "test_q4_soa_byte_equal"
path = "src/bin/test_q4_soa_byte_equal.rs"
required-features = ["opencl"]

[[bin]]
name = "test_kv_reencode_device"
path = "src/bin/test_kv_reencode_device.rs"
required-features = ["opencl"]

[[bin]]
name = "test_faithful_h2o_gpu_seed_device"
path = "src/bin/test_faithful_h2o_gpu_seed_device.rs"
required-features = ["opencl"]

[[bin]]
name = "test_cross_layer_host_mirror_device"
path = "src/bin/test_cross_layer_host_mirror_device.rs"
required-features = ["opencl"]

[dependencies]
# Shared IPC protocol types (manager <-> engine). Separate repo.
argus-shared = { git = "https://github.com/hedone21/argus-shared.git", branch = "main" }
# Extension surface: the stage-axis KVCacheStage registry + linkme auto-registration.
argus-extension-api = { path = "../crates/argus-extension-api" }
# No-engine-dependency leaf crate holding the KV-cache quantization codecs
# (re-exported from `crate::quant`). Shared with out-of-tree KV plugins, cycle-free.
argus-kv-codec = { path = "../crates/argus-kv-codec" }
linkme = "0.3"
# CAOTE (value-aware KVCacheStage) production plugin. Opt-in via the `caote` feature.
caote = { path = "../crates/techniques/caote", optional = true }
# Opaque .so format `synth_q4` (block-quant family without a DType) — force-linked
# into the binary so `--kv-format synth_q4` resolves a real out-of-tree plugin.
synth-q4-format = { path = "../crates/techniques/synth-q4-format" }
# Opaque format `q2_0` (asymmetric 2-bit block-quant, W-CODEC slice 1) — force-linked
# so `--kv-format q2_0` resolves the writable sub-Q4 floor codec via the descriptor.
q2-format = { path = "../crates/techniques/q2-format" }
# Quest (query-aware selective read): the first KVReadStage builtin. Non-optional,
# force-linked, with a startup self-test that fails fast on fat-LTO drop.
quest = { path = "../crates/techniques/quest" }
# Mixed-precision (per-layer KV format policy — N-way mixed precision / KVTuner shape): the first
# KVFormatPolicy builtin. Non-optional, force-linked so `--kv-format mixed_precision` resolves it.
mixed-precision = { path = "../crates/techniques/mixed-precision" }
# StreamingLLM (attention-sink + recent-window KVCacheStage). Extracted from the engine
# core; non-optional, force-linked so `eviction streaming` resolves the out-of-tree plugin.
streaming-llm = { path = "../crates/techniques/streaming-llm" }
# Sliding-window (recent-window KVCacheStage) + no-eviction ("none"). Extracted from the engine
# core; non-optional, force-linked so `eviction sliding` / `eviction none` resolve the plugins.
sliding-window = { path = "../crates/techniques/sliding-window" }
no-eviction = { path = "../crates/techniques/no-eviction" }
# R-KV (cosine redundancy + importance joint eviction) measurement KVCacheStage. Extracted from
# the engine core; gated by the `rkv` feature, force-linked so `eviction rkv` resolves the plugin.
rkv = { path = "../crates/techniques/rkv", optional = true }
# PyramidKV (pyramidal per-layer budget + SnapKV per-head scoring KVCacheStage). Gated by the
# `pyramidkv` feature, force-linked so its PrefillAttention caps arm the prefill-keepset producer
# (build_standard_loop). Default OFF — registering it activates the PFA keep-set path, so it is a
# build-time opt-in (the caote/rkv precedent). cr is taken from --eviction-target-ratio.
pyramidkv = { path = "../crates/techniques/pyramidkv", optional = true }
# TriAttention (trigonometric frequency-domain KV eviction, Mao et al. 2026). Gated by the
# `triattention` feature, force-linked so its `caps.reads ∋ Key` registration is visible to
# `find_mutation_stage("triattention")`. Default OFF (the caote/rkv/pyramidkv precedent).
triattention = { path = "../crates/techniques/triattention", optional = true }
# H2O (Heavy-Hitter Oracle, score-based KVCacheStage). Extracted from the engine core;
# non-optional, force-linked so `eviction h2o` resolves the out-of-tree plugin.
h2o = { path = "../crates/techniques/h2o" }
# D2O (Dynamic Discriminative Operations, WeightedMerge-producing KVCacheStage). Extracted from
# the engine core; non-optional, force-linked. Production builds `d2o::D2OStage` directly with the
# full CLI config; the linkme registration backs `make_stage("d2o")` + the registry self-test.
d2o = { path = "../crates/techniques/d2o" }
# WeightSwap DECIDER (importance × ε bottom-k weight-swap layer selection, WEIGHT axis). Extracted from
# the engine core (EPIC 3 B3-3); non-optional + force-linked so `find_weight_stage("swap")` resolves the
# plugin and the engine `compute_qcf_weight_swap` wrapper can delegate to `weight_swap::compute_qcf_swap_internal`.
weight-swap = { path = "../crates/techniques/weight-swap" }
# Layer-importance scorers (mean_pool / shortgpt_bi LayerScorer plugins, observer/score axis Stage B).
# Extracted from the engine core; non-optional + force-linked because `mean_pool` is the default
# `--importance-formula`, so it must always be resolvable via `find_layer_scorer`.
layer-importance = { path = "../crates/techniques/layer-importance" }
# Attention-score producer (forward-time MAX/GQA/CAOTE/decay/SUM policy, observer/score axis Stage C).
# Extracted from the engine core; non-optional + force-linked because `attn_score` is the default
# scoring path, so it must always be resolvable via `find_score_producer`.
attn-score = { path = "../crates/techniques/attn-score" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Model loading
safetensors = "0.7"
memmap2 = "0.9"
half = "2.7.1"      # bf16 -> f32 conversion

# Weight swap: lock-free Arc snapshot
arc-swap = "1.7"

# Tokenizer
tokenizers = { version = "0.22", default-features = false, features = [
  "progressbar",
  "onig",
] }

# Utilities
anyhow = "1.0"
rand = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP server for argus-chat (OpenAI-compatible API). Blocking, no async runtime —
# the engine decode loop is single-threaded and serialized on one thread.
tiny_http = "0.12"

# Parallelism
rayon = "1.11"

# System
libc = "0.2"

# Logging
log = "0.4"
env_logger = "0.11"

# OpenCL
ocl = { version = "0.19", optional = true }

# dlopen — runtime loading of GATE-C plugin (.so); also Android rpcmem
# libcdsprpc.so dlopen. Non-optional core dependency.
libloading = "0.8"

# CUDA (PC / discrete GPU and Jetson embedded UMA)
cudarc = { version = "0.19", optional = true, default-features = false, features = [
  "std", "driver", "nvrtc", "cublas", "f16", "fallback-dynamic-loading",
  "cuda-11040",
] }

# D-Bus IPC (resilience)
zbus = { version = "5", optional = true, default-features = false, features = ["blocking-api", "async-io"] }

tempfile = "3.0"

[dev-dependencies]
# compile-fail / compile-pass tests for session typestate.
trybuild = "1.0"
# Verifies a separate technique crate self-registers into KV_CACHE_STAGES by
# adding a dependency only (cross-crate linkme). Dev-only (not linked in production).
example-keep-recent = { path = "../crates/techniques/example-keep-recent" }
# Byte-identical engine integration test: drives the REAL pyramidkv stage through the PFA →
# PerHead → per-head-compaction path (prefill_keepset.rs tests). Dev-only — pyramidkv is NOT
# linked into the production engine binary, so engine default behavior is unchanged.
pyramidkv = { path = "../crates/techniques/pyramidkv" }

[features]
default = ["opencl", "profile"]
# The engine's OpenCL backend; forwards to the `attn-score` plugin so it builds its GPU score-reduce
# half (`ScoreReduceBackend` / `score_reduce.cl`) — the GPU twin of the CPU score producer.
opencl = ["ocl", "attn-score/opencl"]
profile = []
# CAOTE value-aware eviction plugin install. When on, the caote crate is linked
# and the `eviction caote` subcommand becomes available.
caote = ["dep:caote"]
# R-KV (cosine redundancy + importance joint eviction) measurement prototype.
# Links + force-links the out-of-tree `rkv` technique crate. Default OFF.
rkv = ["dep:rkv"]
# Links + force-links the `pyramidkv` technique crate. When ON, its PrefillAttention caps arm the
# prefill-keepset path so PyramidKV runs at prefill end (per-layer pyramid budget + per-head SnapKV
# selection). Default OFF (registering a PFA stage auto-arms it; opt in at build time).
pyramidkv = ["dep:pyramidkv"]
# Links + force-links the `triattention` technique crate (trigonometric frequency-domain KV
# eviction). Registers "triattention" with `caps.reads ∋ Key`. Default OFF (build-time opt-in).
triattention = ["dep:triattention"]
cuda = ["cudarc"]               # PC / discrete GPU
cuda-embedded = ["cudarc"]      # Embedded UMA, e.g. Jetson Xavier
resilience = ["zbus"]
