[package]
name = "attn-score"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Attention-score producer technique crate — the forward-time score-accumulation policy (per-layer
# MAX, GQA group averaging, the CAOTE last-layer overwrite, A2SF decay, cross-step SUM, time-norm).
# Extracted from the engine core (the sliding-window/h2o/layer-importance precedent): depends only on
# `argus-extension-api` + `linkme` (no engine reference = proof of additive extension cost).
# Force-linked via one `use attn_score as _;`; the engine resolves it by name through
# `find_score_producer`. `attn_score` is the default scoring path, so the crate is non-optional.
[dependencies]
argus-extension-api = { path = "../../argus-extension-api" }
linkme = "0.3"
# EPIC 2 Stage E: under the `opencl` feature the crate also hosts the GPU half of the score axis
# (`ScoreReduceBackend`), compiling `score_reduce.cl` from the host's borrowed cl_context in make()
# and dispatching on the lent cl_command_queue. Pinned to the engine's 0.19 for a single
# workspace-unified ocl/cl-sys. The engine forwards its own `opencl` feature here.
ocl = { version = "0.19", optional = true }
# Under the `cuda` feature the crate hosts the CUDA half of the score axis (`gpu_reduce_cuda`):
# it compiles `score_reduce.cu` via system nvcc from the host's borrowed CUcontext and dispatches on
# the lent CUstream. Pinned to the engine's 0.19 with the SAME feature set so Cargo unifies to a
# single cudarc build. The engine forwards its own `cuda`/`cuda-embedded` feature here.
cudarc = { version = "0.19", optional = true, default-features = false, features = [
  "std", "driver", "nvrtc", "cublas", "f16", "fallback-dynamic-loading", "cuda-11040",
] }

[features]
# Enables the GPU score-reduce backend (`gpu_reduce`). Off for the pure-CPU producer build.
opencl = ["dep:ocl"]
# Enables the CUDA score-reduce backend (`gpu_reduce_cuda`).
cuda = ["dep:cudarc"]
