[package]
name = "example-bundle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
# GATE-C v3: 한 `.so` 가 stage(register_kv_stages_v2) + format(register_kv_formats_v2)
# 양축을 동시 export 하는 번들. cdylib = dlopen `.so`.
crate-type = ["cdylib", "rlib"]

# 번들 예제 — `argus-extension-api` + `linkme` 만 의존(엔진 force-link 안 함). 한 plugin `.so` 가 stage 1 +
# format 1 을 함께 싣는 vehicle.
[dependencies]
argus-extension-api = { path = "../../argus-extension-api" }
linkme = "0.3"

[features]
plugin-cdylib = []
