[package]
name = "example-keep-recent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
# GATE-C: rlib = static dev-dep (stage_registry visibility test), cdylib = dlopen `.so`
# (stage 축은 static-linkme 전용이라 `.so` 는 capability-0; cdylib 빌드는 빌드 호환용).
crate-type = ["cdylib", "rlib"]

# Example technique crate — depends on `argus-extension-api` (the extension API) + `linkme`
# (a direct plugin dep is required because the static-registration macro expansion hardcodes
# the `linkme::` path). It depends on no other axis (format/hardware) and no engine types =
# the additive-extension cost (2 dependency lines).
[dependencies]
argus-extension-api = { path = "../../argus-extension-api" }
linkme = "0.3"

[features]
# GATE-C: enables the cdylib build (no dynamic KV-stage export — stage axis is static-linkme
# static force-link build to avoid `#[no_mangle]` symbol collisions; turn it on only when
# producing a `.so`.
plugin-cdylib = []
