[package]
name = "q2-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
# rlib = 정적 dep(엔진 force-link `--kv-format q2_0` + dev-dep 가시성),
# cdylib = dlopen `.so`(`--features plugin-cdylib` 빌드 시 register_kv_format_v1 export).
crate-type = ["cdylib", "rlib"]

# q2_0 KV format technique crate (W-CODEC slice 1) — format 축 확장 기법은 `argus-extension-api`
# + `linkme`(정적 등록 매크로 확장이 `linkme::` 경로 하드코딩하므로 plugin 직접 dep 필수)에 의존한다.
# 엔진(argus_engine) / 다른 축(stage/hardware) crate 에 의존하지 않음 = DType variant 없이 외부 crate 가
# KV_FORMATS 에 format 을 더하는 가산 확장의 증거(.so 대역).
[dependencies]
argus-extension-api = { path = "../../argus-extension-api" }
linkme = "0.3"

[features]
# cdylib C-ABI export(register_kv_format_v1) 활성화. 정적 force-link 빌드는 OFF 로 두어
# `#[no_mangle]` 심볼 충돌을 원천 차단한다. `.so` 산출 시에만 켠다.
plugin-cdylib = []
