[package]
name = "rkv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# R-KV measurement technique crate — cosine-redundancy + importance joint eviction
# (arXiv 2505.24133, KV roadmap item 0 measurement sprint). Extracted from the engine core (the
# streaming-llm/h2o/d2o precedent): depends only on `argus-extension-api` + `linkme` (carries its
# own `cosine_similarity`, like d2o). Force-linked under the engine `rkv` feature via
# `#[cfg(feature = "rkv")] use rkv as _;`. Score-based (fusion includes the importance term λ·I).
[dependencies]
argus-extension-api = { path = "../../argus-extension-api" }
linkme = "0.3"
